removed data folder and datasets
oops

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 # Datasets
 mnist.pkl.gz*
+notebooks/cifar-10-python.tar.gz
+notebooks/cifar-10-batches-py/test_batch
+notebooks/cifar-10-batches-py/readme.html
+notebooks/cifar-10-batches-py/data_batch_5
+notebooks/cifar-10-batches-py/data_batch_4
+notebooks/cifar-10-batches-py/data_batch_3
+notebooks/cifar-10-batches-py/data_batch_2
+notebooks/cifar-10-batches-py/data_batch_1
+notebooks/cifar-10-batches-py/batches.meta
 
 # Mac Defaults
 .DS_Store
